--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="form">Form</string>
     <string name="kamera">Kamera</string>
     <string name="take">Take a picture</string>
+    <string name="takeLibrary">Take a picture Library</string>
 </resources>
